--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monitz87/react-native-modal-filter-picker",
+  "name": "react-native-modal-filter-picker-default-option",
   "version": "1.3.4",
   "description": "Cross-platform modal picker for React Native which supports keyword filtering, custom rendering, etc",
   "main": "src/index.js",
